violating_resources/cis-k8s/k8srestrictnamespaces/samples/pci-dss-3.2.1/11.2.1_restrict-default-namespace.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictNamespaces
metadata:
  name: pci-restrict-default-namespace
  annotations:
    description: "Restricts pods from using the default namespace."
    bundles.validator.forsetisecurity.org/pci-dss-v3.2.1: 11.2.1
    policy.library/doc-gen: "do_not_document"
spec:
  enforcementAction: dryrun
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
  parameters:
    restrictedNamespaces:
      - default
